# bibliotecaTeste

./: README.md  bibliotecaAuxiliar.cpp  bibliotecaAuxiliar.h  minhaBiblioteca.h
criacao_dll_c++/: CMakeLists.txt  minhaBiblioteca.cpp
cython/: README.md  c_fib.c  c_fib.h  c_fib_import.c  c_fib_import.pyx  fib_cy.py  fib_py.py  fib_x.pyx  func_py.py  makefile  requirements.txt  run.py  setup.py
utilizacao_c++/: CMakeLists.txt  main.cpp
